crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__if_then_else.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"if\":{\"type\":\"string\"},\"then\":{\"minLength\":1}}"
expression: is_valid_body(schema)
---
if instance.is_string() {
            match instance {
                serde_json::Value::String(s) => !s.is_empty(),
                _ => true,
            }
        } else {
            true
        }
