crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__items_all_of.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"allOf\":[{\"prefixItems\":[{\"type\":\"integer\"}]}],\"type\":\"array\",\"unevaluatedItems\":false}"
expression: is_valid_body(schema)
---
(match instance {
            serde_json::Value::Array(arr) => {
                arr.get(0usize)
                    .map_or(
                        true,
                        |instance| match instance {
                            serde_json::Value::Number(n) => {
                                jsonschema::__private::types::is_integer(n)
                            }
                            _ => false,
                        },
                    )
            }
            _ => true,
        })
            && (match instance {
                serde_json::Value::Array(arr) => {
                    arr.iter()
                        .enumerate()
                        .all(|(idx, item)| { if idx < 1usize { true } else { false } })
                }
                _ => false,
            })
