crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__items_one_of.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"oneOf\":[{\"prefixItems\":[{\"const\":1}]},{\"prefixItems\":[{\"const\":2},{}]}],\"type\":\"array\",\"unevaluatedItems\":false}"
expression: is_valid_body(schema)
---
({
            let mut matched = match instance {
                serde_json::Value::Array(arr) => {
                    arr.get(0usize)
                        .map_or(
                            true,
                            |instance| {
                                static EXPECTED: std::sync::LazyLock<serde_json::Number> = std::sync::LazyLock::new(||
                                {
                                    serde_json::from_str("1")
                                        .expect("Failed to parse const number")
                                });
                                match instance {
                                    serde_json::Value::Number(n) => {
                                        jsonschema::__private::cmp::equal_numbers(n, &*EXPECTED)
                                    }
                                    _ => false,
                                }
                            },
                        )
                }
                _ => true,
            };
            (if match instance {
                serde_json::Value::Array(arr) => {
                    arr.get(0usize)
                        .map_or(
                            true,
                            |instance| {
                                static EXPECTED: std::sync::LazyLock<serde_json::Number> = std::sync::LazyLock::new(||
                                {
                                    serde_json::from_str("2")
                                        .expect("Failed to parse const number")
                                });
                                match instance {
                                    serde_json::Value::Number(n) => {
                                        jsonschema::__private::cmp::equal_numbers(n, &*EXPECTED)
                                    }
                                    _ => false,
                                }
                            },
                        )
                }
                _ => true,
            } {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }) && matched
        })
            && (match instance {
                serde_json::Value::Array(arr) => {
                    arr.iter()
                        .enumerate()
                        .all(|(idx, item)| {
                            if {
                                let mut __one_of_matches = 0usize;
                                let mut __one_of_evaluates = false;
                                if (|instance: &serde_json::Value| match instance {
                                    serde_json::Value::Array(arr) => {
                                        arr.get(0usize)
                                            .map_or(
                                                true,
                                                |instance| {
                                                    static EXPECTED: std::sync::LazyLock<serde_json::Number> = std::sync::LazyLock::new(||
                                                    {
                                                        serde_json::from_str("1")
                                                            .expect("Failed to parse const number")
                                                    });
                                                    match instance {
                                                        serde_json::Value::Number(n) => {
                                                            jsonschema::__private::cmp::equal_numbers(n, &*EXPECTED)
                                                        }
                                                        _ => false,
                                                    }
                                                },
                                            )
                                    }
                                    _ => true,
                                })(instance) {
                                    __one_of_matches += 1;
                                    __one_of_evaluates = __one_of_evaluates || (idx < 1usize);
                                }
                                if (|instance: &serde_json::Value| match instance {
                                    serde_json::Value::Array(arr) => {
                                        arr.get(0usize)
                                            .map_or(
                                                true,
                                                |instance| {
                                                    static EXPECTED: std::sync::LazyLock<serde_json::Number> = std::sync::LazyLock::new(||
                                                    {
                                                        serde_json::from_str("2")
                                                            .expect("Failed to parse const number")
                                                    });
                                                    match instance {
                                                        serde_json::Value::Number(n) => {
                                                            jsonschema::__private::cmp::equal_numbers(n, &*EXPECTED)
                                                        }
                                                        _ => false,
                                                    }
                                                },
                                            )
                                    }
                                    _ => true,
                                })(instance) {
                                    __one_of_matches += 1;
                                    __one_of_evaluates = __one_of_evaluates || (idx < 2usize);
                                }
                                __one_of_matches == 1 && __one_of_evaluates
                            } {
                                true
                            } else {
                                false
                            }
                        })
                }
                _ => false,
            })
