crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__items_schema.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"items\":{\"type\":\"string\"},\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => {
                arr.iter().all(|instance| instance.is_string())
            }
            _ => false,
        }
