crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__items_schema_form.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"prefixItems\":[{}],\"type\":\"array\",\"unevaluatedItems\":{\"type\":\"integer\"}}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => {
                arr.iter()
                    .enumerate()
                    .all(|(idx, item)| {
                        if (idx < 1usize)
                            || (|instance: &serde_json::Value| match instance {
                                serde_json::Value::Number(n) => {
                                    jsonschema::__private::types::is_integer(n)
                                }
                                _ => false,
                            })(item)
                        {
                            true
                        } else {
                            (|instance: &serde_json::Value| match instance {
                                serde_json::Value::Number(n) => {
                                    jsonschema::__private::types::is_integer(n)
                                }
                                _ => false,
                            })(item)
                        }
                    })
            }
            _ => false,
        }
